feat: Add whyUSA translations to all remaining languages
User Request:
- 사용자가 Why USA 페이지에 다국어 적용을 요청함

Implementation Summary:
- WhyUSA.tsx component already had i18n implementation with translation keys
- English (en.json) and Korean (ko.json) translations already existed
- Added whyUSA translations to remaining 11 languages

Languages Updated:
1. Chinese (zh.json) - 简体中文 번역 추가
2. Japanese (ja.json) - 日本語 번역 추가
3. Vietnamese (vi.json) - Tiếng Việt 번역 추가
4. Mongolian (mn.json) - Монгол 번역 추가
5. Arabic (ar.json) - العربية 번역 추가
6. Hindi (hi.json) - हिंदी 번역 추가
7. Spanish (es.json) - Español 번역 추가
8. French (fr.json) - Français 번역 추가
9. German (de.json) - Deutsch 번역 추가
10. Russian (ru.json) - Русский 번역 추가
11. Thai (th.json) - ภาษาไทย 번역 추가

Translation Structure:
Each language now includes complete whyUSA section with:
- hero section (title, subtitle, description)
- breadcrumb
- sectionTitle
- features section with 6 categories:
  * World-Class Education
  * Research & Innovation
  * Scholarship Opportunities
  * Quality of Life
  * Career Opportunities
  * Cultural Diversity

All translations are:
- Culturally appropriate for each language
- Maintain consistent tone and messaging
- Follow existing translation patterns in each file
- Placed at the beginning of each JSON file

Files Changed:
- 11 i18n locale files updated

This completes full multilingual support for the Why USA page across all 13 supported languages (en, ko, zh, ja, vi, mn, ar, hi, es, fr, de, ru, th).

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -1,4 +1,39 @@
 {
+  "whyUSA": {
+    "hero": {
+      "title": "لماذا الولايات المتحدة",
+      "subtitle": "تعليم عالمي المستوى مع شهادات معترف بها عالمياً وفرص لا مثيل لها",
+      "description": "اكتشف لماذا تعد الولايات المتحدة الوجهة الأولى للطلاب الدوليين الذين يسعون للتميز في التعليم."
+    },
+    "breadcrumb": "لماذا الولايات المتحدة",
+    "sectionTitle": "لماذا الولايات المتحدة",
+    "features": {
+      "education": {
+        "title": "تعليم عالمي المستوى",
+        "description": "تستضيف الولايات المتحدة أكثر الجامعات المعترف بها عالمياً، وتقدم برامج متطورة وأعضاء هيئة تدريس ذوي شهرة عالمية وشهادات يقدرها أصحاب العمل في جميع أنحاء العالم."
+      },
+      "research": {
+        "title": "البحث والابتكار",
+        "description": "تقود الجامعات الأمريكية في البحث والابتكار، مع إمكانية الوصول إلى مرافق حديثة واكتشافات رائدة والتعاون مع قادة الصناعة."
+      },
+      "scholarship": {
+        "title": "فرص المنح الدراسية",
+        "description": "تتوفر برامج مساعدات مالية ومنح دراسية سخية للطلاب الدوليين، بما في ذلك البرامج الحكومية مثل فولبرايت."
+      },
+      "life": {
+        "title": "جودة الحياة",
+        "description": "استمتع بمناظر طبيعية متنوعة ومدن نابضة بالحياة وحرم جامعي آمن ومستوى معيشي عالٍ أثناء متابعة تعليمك في أمريكا."
+      },
+      "opportunities": {
+        "title": "الفرص الوظيفية",
+        "description": "تتيح برامج OPT و CPT للطلاب الدوليين اكتساب خبرة عمل قيمة. يبني العديد من الخريجين مسيرات مهنية ناجحة من خلال تأشيرات H-1B."
+      },
+      "culture": {
+        "title": "التنوع الثقافي",
+        "description": "الحرم الجامعي الأمريكي هو بوتقة انصهار للثقافات من جميع أنحاء العالم. ابنِ شبكة عالمية واختبر وجهات نظر متنوعة."
+      }
+    }
+  },
   "nav": {
     "whyUSA": "لماذا الولايات المتحدة",
     "lifeInUSA": "الحياة في الولايات المتحدة",
