--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -1,4 +1,39 @@
 {
+  "whyUSA": {
+    "hero": {
+      "title": "अमेरिका क्यों",
+      "subtitle": "विश्व स्तरीय शिक्षा के साथ वैश्विक स्तर पर मान्यता प्राप्त डिग्री और बेजोड़ अवसर",
+      "description": "जानें कि क्यों संयुक्त राज्य अमेरिका अंतरराष्ट्रीय छात्रों के लिए शिक्षा में उत्कृष्टता की तलाश करने वाले सबसे पसंदीदा गंतव्य है।"
+    },
+    "breadcrumb": "अमेरिका क्यों",
+    "sectionTitle": "अमेरिका क्यों",
+    "features": {
+      "education": {
+        "title": "विश्व स्तरीय शिक्षा",
+        "description": "अमेरिका दुनिया के सबसे अधिक मान्यता प्राप्त विश्वविद्यालयों का घर है, जो अत्याधुनिक कार्यक्रम, विश्व प्रसिद्ध संकाय और दुनिया भर के नियोक्ताओं द्वारा मूल्यवान डिग्री प्रदान करते हैं।"
+      },
+      "research": {
+        "title": "अनुसंधान और नवाचार",
+        "description": "अमेरिकी विश्वविद्यालय अनुसंधान और नवाचार में अग्रणी हैं, अत्याधुनिक सुविधाओं, अभूतपूर्व खोजों और उद्योग के नेताओं के साथ सहयोग की पहुंच के साथ।"
+      },
+      "scholarship": {
+        "title": "छात्रवृत्ति के अवसर",
+        "description": "अंतरराष्ट्रीय छात्रों के लिए उदार वित्तीय सहायता और छात्रवृत्ति कार्यक्रम उपलब्ध हैं, जिसमें फुलब्राइट जैसे सरकार द्वारा प्रायोजित कार्यक्रम शामिल हैं।"
+      },
+      "life": {
+        "title": "जीवन की गुणवत्ता",
+        "description": "विविध परिदृश्य, जीवंत शहर, सुरक्षित परिसर और अमेरिका में अपनी शिक्षा का पीछा करते हुए उच्च जीवन स्तर का अनुभव करें।"
+      },
+      "opportunities": {
+        "title": "करियर के अवसर",
+        "description": "OPT और CPT कार्यक्रम अंतरराष्ट्रीय छात्रों को मूल्यवान कार्य अनुभव प्राप्त करने की अनुमति देते हैं। कई स्नातक H-1B वीजा के माध्यम से सफल करियर बनाते हैं।"
+      },
+      "culture": {
+        "title": "सांस्कृतिक विविधता",
+        "description": "अमेरिकी परिसर दुनिया भर की संस्कृतियों का पिघलने का स्थान हैं। एक वैश्विक नेटवर्क बनाएं और विविध दृष्टिकोणों का अनुभव करें।"
+      }
+    }
+  },
   "nav": {
     "whyUSA": "अमेरिका क्यों",
     "lifeInUSA": "अमेरिका में जीवन",
