--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -1,4 +1,39 @@
 {
+  "whyUSA": {
+    "hero": {
+      "title": "なぜアメリカか",
+      "subtitle": "世界トップクラスの教育、グローバルに認められた学位、比類のない機会",
+      "description": "なぜアメリカが優れた教育を求める留学生にとって最高の目的地なのかを発見してください。"
+    },
+    "breadcrumb": "なぜアメリカか",
+    "sectionTitle": "なぜアメリカか",
+    "features": {
+      "education": {
+        "title": "世界トップクラスの教育",
+        "description": "アメリカには世界で最も認知されている大学があり、最先端のプログラム、世界的に有名な教授陣、そして世界中の雇用主に評価される学位を提供しています。"
+      },
+      "research": {
+        "title": "研究とイノベーション",
+        "description": "アメリカの大学は研究とイノベーションでリードしており、最先端の施設、画期的な発見、そして業界のリーダーとの協力へのアクセスがあります。"
+      },
+      "scholarship": {
+        "title": "奨学金の機会",
+        "description": "留学生向けの寛大な経済支援と奨学金プログラムが利用可能で、フルブライトのような政府支援プログラムも含まれます。"
+      },
+      "life": {
+        "title": "生活の質",
+        "description": "アメリカで教育を受けながら、多様な景観、活気ある都市、安全なキャンパス、そして高い生活水準を体験してください。"
+      },
+      "opportunities": {
+        "title": "キャリアの機会",
+        "description": "OPTとCPTプログラムにより、留学生は貴重な就業経験を得ることができます。多くの卒業生がH-1Bビザを通じて成功したキャリアを築いています。"
+      },
+      "culture": {
+        "title": "文化的多様性",
+        "description": "アメリカのキャンパスは世界中の文化が融合する場所です。グローバルなネットワークを構築し、多様な視点を体験してください。"
+      }
+    }
+  },
   "header": {
     "logo": "Study in USA",
     "nav": {
