--- a/src/i18n/locales/mn.json
+++ b/src/i18n/locales/mn.json
@@ -1,4 +1,39 @@
 {
+  "whyUSA": {
+    "hero": {
+      "title": "Яагаад АНУ",
+      "subtitle": "Дэлхийн түвшний боловсрол, дэлхийд хүлээн зөвшөөрөгдсөн зэрэг ба дүйцэгдэшгүй боломжууд",
+      "description": "Яагаад АНУ нь боловсролын шилдэг чанарыг эрэлхийлэгч олон улсын оюутнуудын хамгийн тэргүүний очих газар болохыг олж мэдээрэй."
+    },
+    "breadcrumb": "Яагаад АНУ",
+    "sectionTitle": "Яагаад АНУ",
+    "features": {
+      "education": {
+        "title": "Дэлхийн түвшний боловсрол",
+        "description": "АНУ нь дэлхийд хамгийн их хүлээн зөвшөөрөгдсөн их сургуулиудтай бөгөөд дэвшилтэт хөтөлбөрүүд, дэлхийд алдартай багш нар, мөн дэлхийн ажил олгогчдын үнэлдэг зэрэг олгодог."
+      },
+      "research": {
+        "title": "Судалгаа & Инноваци",
+        "description": "Америкийн их сургуулиуд судалгаа болон инновацид тэргүүлдэг бөгөөд хамгийн сүүлийн үеийн байгууламжууд, томоохон нээлтүүд болон салбарын манлайлагчидтай хамтран ажиллах боломжтой."
+      },
+      "scholarship": {
+        "title": "Тэтгэлгийн боломжууд",
+        "description": "Олон улсын оюутнуудад зориулсан өгөөмөр санхүүгийн тусламж болон тэтгэлгийн хөтөлбөрүүд байдаг бөгөөд үүнд Fulbright гэх мэт засгийн газраас ивээн тэтгэсэн хөтөлбөрүүд багтана."
+      },
+      "life": {
+        "title": "Амьдралын чанар",
+        "description": "Америкт боловсрол эзэмшихийн зэрэгцээ олон янзын ландшафт, эрч хүчтэй хотууд, аюулгүй кампус болон өндөр түвшний амьдралыг мэдрээрэй."
+      },
+      "opportunities": {
+        "title": "Карьерын боломжууд",
+        "description": "OPT болон CPT хөтөлбөрүүд нь олон улсын оюутнуудад үнэ цэнэтэй ажлын туршлага олж авах боломжийг олгодог. Олон төгсөгчид H-1B виз ашиглан амжилттай карьераа бүтээдэг."
+      },
+      "culture": {
+        "title": "Соёлын олон янз байдал",
+        "description": "Америкийн кампусууд нь дэлхийн өнцөг булан бүрийн соёлын уусмал газар юм. Дэлхийн хэмжээний сүлжээ бүтээж, олон янзын үзэл бодлыг туршаарай."
+      }
+    }
+  },
   "header": {
     "logo": "АНУ-д суралц",
     "nav": {
