--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,4 +1,39 @@
 {
+  "whyUSA": {
+    "hero": {
+      "title": "Почему США",
+      "subtitle": "Образование мирового класса с глобально признанными дипломами и несравненными возможностями",
+      "description": "Узнайте, почему Соединенные Штаты являются главным направлением для международных студентов, стремящихся к превосходству в образовании."
+    },
+    "breadcrumb": "Почему США",
+    "sectionTitle": "Почему США",
+    "features": {
+      "education": {
+        "title": "Образование мирового класса",
+        "description": "США принимают наиболее признанные во всем мире университеты, предлагающие передовые программы, всемирно известный преподавательский состав и дипломы, ценимые работодателями по всему миру."
+      },
+      "research": {
+        "title": "Исследования и инновации",
+        "description": "Американские университеты лидируют в области исследований и инноваций с доступом к современным объектам, прорывным открытиям и сотрудничеству с отраслевыми лидерами."
+      },
+      "scholarship": {
+        "title": "Стипендиальные возможности",
+        "description": "Щедрые программы финансовой помощи и стипендий доступны для международных студентов, включая спонсируемые государством программы, такие как Фулбрайт."
+      },
+      "life": {
+        "title": "Качество жизни",
+        "description": "Испытайте разнообразные ландшафты, яркие города, безопасные кампусы и высокий уровень жизни, получая образование в Америке."
+      },
+      "opportunities": {
+        "title": "Карьерные возможности",
+        "description": "Программы OPT и CPT позволяют международным студентам получить ценный опыт работы. Многие выпускники строят успешную карьеру через визы H-1B."
+      },
+      "culture": {
+        "title": "Культурное разнообразие",
+        "description": "Американские кампусы - это плавильные котлы культур со всего мира. Создайте глобальную сеть и познакомьтесь с разнообразными перспективами."
+      }
+    }
+  },
   "nav": {
     "whyUSA": "Почему США",
     "lifeInUSA": "Жизнь в США",
