--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -1,4 +1,39 @@
 {
+  "whyUSA": {
+    "hero": {
+      "title": "ทำไมต้องสหรัฐฯ",
+      "subtitle": "การศึกษาระดับโลกด้วยปริญญาที่ได้รับการยอมรับทั่วโลกและโอกาสที่ไม่มีใครเทียบได้",
+      "description": "ค้นพบว่าทำไมสหรัฐอเมริกาจึงเป็นจุดหมายปลายทางอันดับหนึ่งสำหรับนักศึกษาต่างชาติที่แสวงหาความเป็นเลิศทางการศึกษา"
+    },
+    "breadcrumb": "ทำไมต้องสหรัฐฯ",
+    "sectionTitle": "ทำไมต้องสหรัฐฯ",
+    "features": {
+      "education": {
+        "title": "การศึกษาระดับโลก",
+        "description": "สหรัฐฯ เป็นที่ตั้งของมหาวิทยาลัยที่ได้รับการยอมรับมากที่สุดในโลก เสนอหลักสูตรที่ทันสมัย คณาจารย์ที่มีชื่อเสียงระดับโลก และปริญญาที่นายจ้างทั่วโลกให้คุณค่า"
+      },
+      "research": {
+        "title": "การวิจัยและนวัตกรรม",
+        "description": "มหาวิทยาลัยอเมริกันเป็นผู้นำในด้านการวิจัยและนวัตกรรม พร้อมการเข้าถึงสิ่งอำนวยความสะดวกที่ทันสมัย การค้นพบที่ก้าวล้ำ และความร่วมมือกับผู้นำอุตสาหกรรม"
+      },
+      "scholarship": {
+        "title": "โอกาสทุนการศึกษา",
+        "description": "มีโปรแกรมความช่วยเหลือทางการเงินและทุนการศึกษาที่ใจกว้างสำหรับนักศึกษาต่างชาติ รวมถึงโปรแกรมที่ได้รับการสนับสนุนจากรัฐบาล เช่น Fulbright"
+      },
+      "life": {
+        "title": "คุณภาพชีวิต",
+        "description": "สัมผัสทิวทัศน์ที่หลากหลาย เมืองที่มีชีวิตชีวา วิทยาเขตที่ปลอดภัย และมาตรฐานการครองชีพที่สูงในขณะที่คุณศึกษาในอเมริกา"
+      },
+      "opportunities": {
+        "title": "โอกาสในการทำงาน",
+        "description": "โปรแกรม OPT และ CPT ช่วยให้นักศึกษาต่างชาติได้รับประสบการณ์การทำงานที่มีค่า ผู้สำเร็จการศึกษาจำนวนมากสร้างอาชีพที่ประสบความสำเร็จผ่านวีซ่า H-1B"
+      },
+      "culture": {
+        "title": "ความหลากหลายทางวัฒนธรรม",
+        "description": "วิทยาเขตอเมริกันเป็นหม้อหลอมของวัฒนธรรมจากทั่วโลก สร้างเครือข่ายระดับโลกและสัมผัสมุมมองที่หลากหลาย"
+      }
+    }
+  },
   "nav": {
     "whyUSA": "ทำไมต้องสหรัฐฯ",
     "lifeInUSA": "ชีวิตในสหรัฐฯ",
