--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,4 +1,39 @@
 {
+  "whyUSA": {
+    "hero": {
+      "title": "为什么选择美国",
+      "subtitle": "世界一流的教育，全球认可的学位和无与伦比的机会",
+      "description": "了解为什么美国是寻求卓越教育的国际学生的首选目的地。"
+    },
+    "breadcrumb": "为什么选择美国",
+    "sectionTitle": "为什么选择美国",
+    "features": {
+      "education": {
+        "title": "世界一流教育",
+        "description": "美国拥有全球最受认可的大学，提供尖端课程、世界知名的教师队伍以及受全球雇主重视的学位。"
+      },
+      "research": {
+        "title": "研究与创新",
+        "description": "美国大学在研究和创新方面处于领先地位，拥有最先进的设施、突破性的发现，以及与行业领导者的合作机会。"
+      },
+      "scholarship": {
+        "title": "奖学金机会",
+        "description": "为国际学生提供丰厚的经济援助和奖学金项目，包括政府资助的项目，如富布赖特奖学金。"
+      },
+      "life": {
+        "title": "生活质量",
+        "description": "在美国追求教育的同时，体验多样化的景观、充满活力的城市、安全的校园和高标准的生活。"
+      },
+      "opportunities": {
+        "title": "职业机会",
+        "description": "OPT和CPT项目允许国际学生获得宝贵的工作经验。许多毕业生通过H-1B签证建立成功的职业生涯。"
+      },
+      "culture": {
+        "title": "文化多样性",
+        "description": "美国校园是来自世界各地文化的熔炉。建立全球网络，体验多元化的观点。"
+      }
+    }
+  },
   "header": {
     "logo": "留学美国",
     "nav": {
